src/test/ui/borrowck/issue-81899.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-81899.rs:11:5
   |
LL | const _CONST: &[u8] = &f(&[], |_| {});
   |                        -------------- inside `_CONST` at $DIR/issue-81899.rs:4:24
...
LL |     panic!()
   |     ^^^^^^^^
   |     |
   |     the evaluated program panicked at 'explicit panic', $DIR/issue-81899.rs:11:5
   |     inside `f::<[closure@$DIR/issue-81899.rs:4:31: 4:34]>` at $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
  --> $DIR/issue-81899.rs:4:23
   |
LL | const _CONST: &[u8] = &f(&[], |_| {});
   |                       ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
